fixed the position of navbar on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,12 +266,13 @@ button.btn-form a {
     }
     .nav-center {
         display: block;
+        padding: 0;
     }
     .nav-header {
-        padding: 2% 2%;
         justify-content: space-between;
         align-items: center;
         color: var(--txt-pr-color);
+        padding: 2% 2%;
     }
     #toggle { 
         z-index: 5;
@@ -282,7 +283,10 @@ button.btn-form a {
         font-size: 2rem;
     }
     .link-container {
+        background-color: #FFFFFF;
+        position: absolute;
         height: 0;
+        width: 100%;
         overflow: hidden;
         transition: all .3 linear;
         -webkit-transition: all .3 linear;
@@ -292,6 +296,7 @@ button.btn-form a {
     }
     .links {
         display: block;
+        padding-left: 2%;
     }
     .links li a{
         padding-bottom: 10px;
